--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,10 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Log In</a>
+            <%= link_to 'Log In', new_user_session_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sign In</a>
+            <%= link_to 'Sign Up', new_user_registration_path, class: "nav-link" %>
           </li>
         </ul>
       </div>
