--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           </li>
           <% if user_signed_in? %>
             <li class="nav-item">
-              <%= link_to 'Log Out', destroy_user_session, method: :delete, class: "nav-link" %>
+              <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "nav-link" %>
             </li>
           <% else %>
             <li class="nav-item">
