--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Bienvenido <%= current_user? ? curret_user.name : "extraño" %></h1>
+<p>Este es mi clon de twitter </p>
