Modified index view and fixed a syntax error there

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Bienvenido <%= current_user? ? curret_user.name : "extraño" %></h1>
-<p>Este es mi clon de twitter </p>
+<h1>Welcome <%= current_user ? current_user.name : "stranger" %></h1>
+<p>This is my Twitter clone </p>
