Modified index.html.erb view from tweets and modified destroy method in tweets controller.

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -18,14 +18,14 @@
         </tr>
     </thead>
     <tbody>
-    <% @tweets.each do |t| %>
+    <% @tweets.each do |tweet| %>
         <tr>
-            <td><%= t.content %></td>
-            <td><%= t.user %></td>
+            <td><%= tweet.content %></td>
+            <td><%= tweet.user %></td>
             <td><%= link_to t.created_at,tweet_path(t) %></td>
-            <% if current_user && current_user.id == t.user_id %>
-                <td><%= link_to 'Edit', edit_tweet_path(t) %></td>
-                <td><%= link_to 'Delete', tweets_path(t), method: :delete, data: {confirm: 'Are you sure you want to delete your tweet?'}%></td>
+            <% if current_user && current_user.id == tweet.user_id %>
+                <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
+                <td><%= link_to 'Delete', tweet, method: :delete, data: {confirm: 'Are you sure you want to delete your tweet?'}%></td>
             <% end %>
         </tr>
     <% end %>
