Fixed a syntax error that prevented the destroy link to work

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -22,10 +22,10 @@
         <tr>
             <td><%= tweet.content %></td>
             <td><%= tweet.user %></td>
-            <td><%= link_to t.created_at,tweet_path(t) %></td>
+            <td><%= link_to tweet.created_at, tweet_path(tweet) %></td>
             <% if current_user && current_user.id == tweet.user_id %>
                 <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
-                <td><%= link_to 'Delete', tweet, method: :delete, data: {confirm: 'Are you sure you want to delete your tweet?'}%></td>
+                <td><%= link_to 'Delete', tweet, method: :delete, data: { confirm: 'Are you sure you want to delete your tweet?' }%></td>
             <% end %>
         </tr>
     <% end %>
