Added retweet link

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -14,7 +14,7 @@
             <th>Author</th>
             <th>Content</th>
             <th>Tweeted At</th>
-            <th colspan='3'></th>
+            <th colspan='4'></th>
         </tr>
     </thead>
     <tbody>
@@ -23,6 +23,9 @@
             <td><%= tweet.content %></td>
             <td><%= tweet.user %></td>
             <td><%= link_to tweet.created_at, tweet_path(tweet) %></td>
+            <% if user_signed_in? %>
+               <td> <%= link_to 'Retweet', new_tweet_path, method: :post, content: tweet.content %></td>
+            <% end %>
             <% if current_user && current_user.id == tweet.user_id %>
                 <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
                 <td><%= link_to 'Delete', tweet, method: :delete, data: { confirm: 'Are you sure you want to delete your tweet?' }%></td>
