--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,4 +1,17 @@
 <h1>Create a Tweet</h1>
 
+
+<% if @tweet.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@tweet.errors.count, "error") %> prohibited this tweet from being created:</h2>
+ 
+    <ul>
+    <% @tweet.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= render 'form', tweet: @tweet %>
 
