Modified routes, index.html.erb and retweet action in tweets controller

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -25,7 +25,7 @@
             <td><%= tweet.user %></td>
             <td><%= link_to tweet.created_at, tweet_path(tweet) %></td>
             <% if user_signed_in? %>
-                <td><%= link_to 'Retweet', retweet_path(tweet.id, tweet.user.id) %></td>
+                <td><%= link_to 'Retweet', retweet_path(tweet) %></td>
             <% end %>
             <% if current_user && current_user.id == tweet.user_id %>
                 <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
