--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -7,7 +7,8 @@
         </div>
 
         <div>
-            <%= ff.hidden_field :retweet, value: true %>
+            <%= ff.hidden_field :user_id, value: current_user.id %>
+            <%= ff.hidden_field :tweet_id, value: @tweet_id %>
         </div>
 
         <div>
