--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -29,7 +29,11 @@
             <td><%= link_to tweet.likes.count %></td>
             <% if user_signed_in? %>
                 <td><%= link_to 'Retweet', retweet_path(tweet) %></td>
-                <td><%= link_to 'Like', create_like_path(tweet) %></td>
+                <% if Like.find(user_id: current_user.id, tweet_id: tweet.id) %>
+                <td><%= link_to 'Destroy', create_like_path(tweet) %></td>
+                <% else %>
+                    <td><%= link_to 'Like', create_like_path(tweet) %></td>
+                <% end %>
             <% end %>
             <% if current_user && current_user.id == tweet.user_id %>
                 <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
