Modified index view for likes and index action in likes controller

--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -10,8 +10,9 @@
         <% @likes.each do |l| %>
         <tr>
             <td>
-                <% l.user %>
+                <p><strong><%= l.user %></strong> likes this</p>
             </td>
         </tr>
+        <% end %>
     </tbody>
 </table>
