Modified routes.rb making the route to create likes a post route. Specify the post method in the link in tweets index

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -26,14 +26,11 @@
             <td><%= tweet.user %></td>
             <td><%= link_to tweet.created_at, tweet_path(tweet) %></td>
             <td><%= link_to tweet.retweets.count, retweets_path(tweet) %></td>
-            <td><%= link_to tweet.likes.count, likes_path(tweet)%></td>
+            <td><%= tweet.likes.count %></td>
             <% if user_signed_in? %>
                     <td><%= link_to 'Retweet', retweet_path(tweet) %></td>
-                <% if @likes.include?(Like.find_by(tweet_id: tweet.id)) %>
+                    <td><%= link_to 'Like', create_like_path(tweet), method: :post %></td>
                     <td><%= link_to 'Unlike', destroy_like_path(tweet), method: :delete %></td>
-                <% else %>
-                    <td><%= link_to 'Like', create_like_path(tweet) %></td>
-                <% end %>
             <% end %>
             <% if current_user && current_user.id == tweet.user_id %>
                 <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
