--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -28,8 +28,12 @@
             <td><%= link_to tweet.retweets.count, retweets_path(tweet) %></td>
             <td><%= tweet.likes.count %></td>
             <% if user_signed_in? %>
-                <td><%= link_to 'Retweet', retweet_path(tweet) %></td>
-                <%if tweet.likes.include?(Like.find_by(user_id: current_user.id)) %>
+                <% if tweet.retweets.include?(Retweet.find_by(user_id: current_user.id, tweet_id: tweet.id)) %>
+                <td><p>Retweeted</p></td>
+                <% else %>
+                    <td><%= link_to 'Retweet', retweet_path(tweet) %></td>
+                <% end %>
+                <%if tweet.likes.include?(Like.find_by(user_id: current_user.id, tweet_id: tweet.id)) %>
                     <td><%= link_to 'Unlike', destroy_like_path(tweet), method: :delete %></td>
                 <% else %>
                     <td><%= link_to 'Like', create_like_path(tweet), method: :post %></td>
