Added links to edit and destroy tweet in index view of tweets. Also modified new action in tweets controller

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,22 +5,7 @@
     </div>
 </div>
 
-<% if user_signed_in? %>
-    <div class = "container">
-        <h3>Share something</h3>
-        <%= form_with(model: @tweet, local: true) do |ff| %>
-            <div class = "form-group">
-                <div>
-                    <%= ff.text_area :content, class: "form-control w-50" %>
-                </div>
-            </div>
-        
-            <div>
-                <%= ff.submit nil, class: "btn btn-primary mt-2 mb-5" %>
-            </div>
-        <% end %>
-    </div>
-<% end %>
+<%= render 'form', tweet: @tweet %>
 
 
 <div class = "container">
@@ -30,21 +15,28 @@
             <div class="card-body">
                 <h5 class="card-title"><%= tweet.user %></h5>
                 <p class="card-text"><%= tweet.content %>.</p>
-                <span class="text-success"><%= tweet.retweets.count %></span>
-                <% if user_signed_in? %>
+                <span class="text-success"><%= "#{tweet.retweets.count} rts"%></span>
+                <% if user_signed_in? %> 
                     <% if tweet.retweets.include?(Retweet.find_by(user_id: current_user.id, tweet_id: tweet.id)) %>
                         <span class="text-primary">rtweeted</span>
                     <% else %>
                         <%= link_to 'rt', retweet_path(tweet), class: "card-link" %>
                     <% end %>
                 <% end %>
-                <span class="text-success"><%= tweet.likes.count %></span>
-                <% if user_signed_in? && tweet.likes.include?(Like.find_by(user_id: current_user.id, tweet_id: tweet.id)) %>
-                    <%= link_to 'Unlike', destroy_like_path(tweet), method: :delete, class: "card-link" %>
-                <% else %>
-                    <%= link_to 'Like', create_like_path(tweet), method: :post, class: "card-link" %>
+                <span class="text-success"><%= "#{tweet.likes.count} likes" %></span>
+                <% if user_signed_in? %>
+                    <% if tweet.likes.include?(Like.find_by(user_id: current_user.id, tweet_id: tweet.id)) %>
+                        <%= link_to 'Unlike', destroy_like_path(tweet), method: :delete, class: "card-link" %>
+                    <% else %>
+                        <%= link_to 'Like', create_like_path(tweet), method: :post, class: "card-link" %>
+                    <% end %>
                 <% end %>
                 <%= link_to "#{time_ago_in_words(tweet.created_at)} ago", tweet_path(tweet) %>
+
+                <% if current_user && current_user.id == tweet.user_id %>
+                        <%= link_to 'Edit', edit_tweet_path(tweet), class: "text-warning mr-auto" %>
+                        <%= link_to 'Delete', tweet, method: :delete, data: { confirm: 'Are you sure you want to delete your tweet?' }, class: "text-danger" %>   
+                <% end %>
             </div>
         </div>
     <% end %>
