--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -20,7 +20,7 @@
                     <% if tweet.retweets.include?(Retweet.find_by(user_id: current_user.id, tweet_id: tweet.id)) %>
                         <span class="text-primary">rtweeted</span>
                     <% else %>
-                        <%= link_to 'rt', retweet_path(tweet), class: "card-link" %>
+                        <%= link_to 'rt', retweet_path(tweet.id), class: "card-link" %>
                     <% end %>
                 <% end %>
                 <span class="text-success"><%= "#{tweet.likes.count} likes" %></span>
