--- a/app/views/retweets/new.html.erb
+++ b/app/views/retweets/new.html.erb
@@ -1,14 +1,13 @@
 <div class = "container">
     <h3>Retweet!</h3>
-    <%= form_with(model: @tweet, local: true) do |ff| %>
+    <%= form_with(url: create_retweet, local: true) do |ff| %>
         <div class = "form-group">
             <div>
-                <%= ff.text_area :content, value: @content, class: "form-control w-50" %>
+                <%= ff.text_area :content, class: "form-control w-50" %>
             </div>
         </div>
     
             <div>
-                <%= ff.hidden_field :user_id, value: current_user.id %>
                 <%= ff.hidden_field :tweet_id, value: @tweet_id %>
             </div>
     
