--- a/app/views/retweets/new.html.erb
+++ b/app/views/retweets/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "container">
     <h3>Retweet!</h3>
-    <%= form_with(url: create_retweet, local: true) do |ff| %>
+    <%= form_with(scope: :retweet, url: create_retweet_path, local: true) do |ff| %>
         <div class = "form-group">
             <div>
                 <%= ff.text_area :content, class: "form-control w-50" %>
