Added Google Fonts to layout, modified the font of title in index of tweets

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,6 +1,6 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid bg-info">
     <div class="container">
-      <h1 class="display-4">Welcome <%= current_user ? current_user.name : "stranger" %>!</h1>
+      <h1 class="display-4 title">Welcome <%= current_user ? current_user.name : "stranger" %>!</h1>
       <p class="lead">This is definetly not Twitter!</p>
     </div>
 </div>
