--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid bg-info">
     <div class="container">
       <h1 class="display-4 title">Welcome <%= current_user ? current_user.name : "stranger" %>!</h1>
-      <p class="lead">This is definetly not Twitter!</p>
+      <p class="lead text-white">This is definetly not Twitter!</p>
     </div>
 </div>
 
@@ -47,7 +47,7 @@
             </div>
         </div>
     <% end %>
-    <div class='text-center'>
+    <div class='text-center mb-4'>
         <%= link_to_next_page @tweets, 'Show more tweets' %>
         <%= link_to_prev_page @tweets, 'Go back' %>
     </div>
