--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -47,7 +47,7 @@
             </div>
         </div>
     <% end %>
-    <div class='text-center mb-4'>
+    <div class='text-center mb-4 more'>
         <%= link_to_next_page @tweets, 'Show more tweets' %>
         <%= link_to_prev_page @tweets, 'Go back' %>
     </div>
