Modified footer to make it a sticky footer

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -10,3 +10,17 @@ h1, .logo {
 .more {
     font-family: 'Lobster Two', cursive;;
 }
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.wrapper {
+min-height: 100%;
+margin-bottom: -50px;
+}
+
+.footer, .push {
+    height: 50px;
+}
