--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
       <%= yield %>
       <div class="push"></div>
     </div>
-    <footer class="footer text-center bg-info text-white">
+    <footer class="footer text-center bg-info text-white py-5">
       <span class="logo">Definetly not Twitter 2020</span>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
