Added a comment in main.css

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -11,6 +11,7 @@ h1, .logo {
     font-family: 'Lobster Two', cursive;;
 }
 
+/* All this for a sticky footer */
 html, body {
     height: 100%;
     margin: 0;
